Fix dashboard alignment

--- a/src/byro/static/office/scss/_dashboard.scss
+++ b/src/byro/static/office/scss/_dashboard.scss
@@ -2,12 +2,14 @@
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
+    margin-left: -5px;
+    margin-right: -5px;
 }
 .dashboard-block {
     flex: 1 0 auto;
     align-self: stretch;
     padding: 15px 5px;
-    border: 5px solid white;
+    margin: 5px;
     min-height: 160px;
     width: 340px;
     background: $brand-lightest;
